[project]
name = "gcp-monitor-lib"
version = "0.1.0"
description = "A library for querying and visualizing Google Cloud Vertex AI metrics."
dependencies = [
    "google-cloud-monitoring",
    "pandas",
    "pydantic",
    "matplotlib",
    "numpy",
    "tabulate",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"